// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CardBody correctly applies the theme context className 1`] = `
<Spacer
  className="orion-fusion-theme"
  isInlineBlock={false}
  marginBottom="none"
  marginLeft="none"
  marginRight="none"
  marginTop="none"
  paddingBottom="medium"
  paddingLeft="medium"
  paddingRight="medium"
  paddingTop="medium"
>
  <div
    className="card-body"
  />
</Spacer>
`;

exports[`CardBody should render a default component 1`] = `
<Spacer
  isInlineBlock={false}
  marginBottom="none"
  marginLeft="none"
  marginRight="none"
  marginTop="none"
  paddingBottom="medium"
  paddingLeft="medium"
  paddingRight="medium"
  paddingTop="medium"
>
  <div
    className="card-body"
  />
</Spacer>
`;
